--- a/cpp/msbuild/freeze.test.props
+++ b/cpp/msbuild/freeze.test.props
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+
+    <PropertyGroup>
+        <!-- TODO: allow building tests against binary distributions Ice+Freeze -->
+        <Ice_BuildingSrc>yes</Ice_BuildingSrc>
+        <Ice_CppMapping>cpp98</Ice_CppMapping>
+    </PropertyGroup>
+
     <Import Project="$(MSBuildThisFileDirectory)\freeze.cpp.props"/>
 
     <PropertyGroup>
@@ -9,11 +16,10 @@
 
     <ItemDefinitionGroup>
         <ClCompile>
-            <AdditionalIncludeDirectories>$(Platform)\$(Configuration);$(Ice_SrcRootDir)\test\include;$(FreezeIncludePath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+            <AdditionalIncludeDirectories>$(Platform)\$(Configuration);$(Ice_SrcRootDir)\test\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
         </ClCompile>
         <Link>
-            <AdditionalLibraryDirectories>$(FreezeLibraryPath)</AdditionalLibraryDirectories>
+            <AdditionalLibraryDirectories>$(Ice_SrcRootDir)\test\Common\msbuild\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
         </Link>
     </ItemDefinitionGroup>
-
 </Project>
