--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -4,48 +4,35 @@
 #
 # **********************************************************************
 
-top_srcdir	= .
+top_srcdir 	:= ..
+lang_srcdir	:= $(top_srcdir)/cpp
 
-include $(top_srcdir)/make/Make.rules
+include $(top_srcdir)/config/Make.rules
+include $(lang_srcdir)/config/Make.rules
 
-SUBDIRS		= src include
 
-ifneq ($(MAKECMDGOALS),install)
-    SUBDIRS	:= $(SUBDIRS) test demo
-endif
+#
+# Create projects for all the Slice translators from src/slice2* and load source projects.
+#
+projects :=
+include $(shell find $(lang_srcdir)/src -name Makefile.mk)
+$(foreach t,$(wildcard $(lang_srcdir)/src/slice2*),$(eval $(call create-translator-project,$(call project,$t))))
+$(call make-projects,$(projects),make-cpp-src-project)
 
-INSTALL_SUBDIRS	= $(install_bindir) $(install_libdir)$(cpp11libdirsuffix) $(install_includedir) \
-	$(install_mandir)
+#
+# Create and load test projects.
+#
+projects :=
+tests := $(tests-without-project-makefile)
+include $(shell find $(lang_srcdir)/test -name Makefile.mk)
+$(foreach t,$(tests),$(eval $(call create-cpp-test-project,$(t))))
+$(call make-projects,$(projects),make-cpp-test-project)
 
-install:: install-common
-	@for subdir in $(INSTALL_SUBDIRS); \
-	do \
-	    if test ! -d $(DESTDIR)$$subdir ; \
-	    then \
-		echo "Creating $(DESTDIR)$$subdir..." ; \
-		mkdir -p $(DESTDIR)$$subdir ; \
-		chmod a+rx $(DESTDIR)$$subdir ; \
-	    fi ; \
-	done
-ifeq ($(create_runpath_symlink),yes)
-	@if test -h $(embedded_runpath_prefix) ; \
-	then \
-	     if `\rm -f $(embedded_runpath_prefix) 2>/dev/null`; \
-              then echo "Removed symbolic link $(embedded_runpath_prefix)"; fi \
-        fi
-	@if ! test -d $(embedded_runpath_prefix) ; \
-	then \
-	     if `ln -s $(prefix) $(embedded_runpath_prefix) 2>/dev/null`; \
-              then echo "Created symbolic link $(embedded_runpath_prefix) --> $(prefix)"; fi \
-	fi
-endif
-
-$(EVERYTHING)::
-	@for subdir in $(SUBDIRS); \
-	do \
-	    echo "making $@ in $$subdir"; \
-	    ( cd $$subdir && $(MAKE) $@ ) || exit 1; \
-	done
-
-test::
-	@python $(top_srcdir)/allTests.py
+#
+# Create and load demo projects.
+#
+projects :=
+demos :=
+include $(shell find $(lang_srcdir)/demo -name Makefile.mk)
+$(foreach d,$(demos),$(eval $(call create-cpp-demo-project,$(d))))
+$(call make-projects,$(projects),make-cpp-demo-project)
