--- a/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj
+++ b/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -69,6 +69,12 @@
     <ResourceCompile Include="..\..\DumpDB.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\CPlusPlusUtil.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Grammar.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Parser.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Preprocessor.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Scanner.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\SliceUtil.cpp" />
     <ClCompile Include="..\..\AssignVisitor.cpp" />
     <ClCompile Include="..\..\Data.cpp" />
     <ClCompile Include="..\..\DumpDB.cpp" />
@@ -76,10 +82,10 @@
     <ClCompile Include="..\..\Error.cpp" />
     <ClCompile Include="..\..\Exception.cpp" />
     <ClCompile Include="..\..\Functions.cpp" />
-    <ClCompile Include="..\..\Grammar.cpp" />
-    <ClCompile Include="..\..\Parser.cpp" />
+    <ClCompile Include="..\..\FSGrammar.cpp" />
+    <ClCompile Include="..\..\FSParser.cpp" />
     <ClCompile Include="..\..\Print.cpp" />
-    <ClCompile Include="..\..\Scanner.cpp" />
+    <ClCompile Include="..\..\FSScanner.cpp" />
     <ClCompile Include="..\..\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -102,6 +108,8 @@
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.3\build\native\berkeley.db.v120.targets" Condition="Exists('..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.3\build\native\berkeley.db.v120.targets')" />
     <Import Project="..\..\..\..\msbuild\packages\berkeley.db.v140.5.3.28.3\build\native\berkeley.db.v140.targets" Condition="Exists('..\..\..\..\msbuild\packages\berkeley.db.v140.5.3.28.3\build\native\berkeley.db.v140.targets')" />
+    <Import Project="..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.9\build\native\mcpp.v120.targets" Condition="Exists('..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.9\build\native\mcpp.v120.targets')" />
+    <Import Project="..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.9\build\native\mcpp.v140.targets" Condition="Exists('..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.9\build\native\mcpp.v140.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -109,5 +117,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.3\build\native\berkeley.db.v120.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.3\build\native\berkeley.db.v120.targets'))" />
     <Error Condition="!Exists('..\..\..\..\msbuild\packages\berkeley.db.v140.5.3.28.3\build\native\berkeley.db.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\berkeley.db.v140.5.3.28.3\build\native\berkeley.db.v140.targets'))" />
+    <Error Condition="!Exists('..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.9\build\native\mcpp.v120.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.9\build\native\mcpp.v120.targets'))" />
+    <Error Condition="!Exists('..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.9\build\native\mcpp.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.9\build\native\mcpp.v140.targets'))" />
   </Target>
 </Project>
