--- a/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj.filters
+++ b/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ResourceCompile Include="..\DumpDB.rc" />
+    <ResourceCompile Include="..\..\DumpDB.rc" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Slice Files">
@@ -37,21 +37,21 @@
     <ClCompile Include="..\..\Functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Grammar.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Parser.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Print.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Scanner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\CPlusPlusUtil.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Grammar.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Parser.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Preprocessor.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Scanner.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\SliceUtil.cpp" />
+    <ClCompile Include="..\..\FSGrammar.cpp" />
+    <ClCompile Include="..\..\FSParser.cpp" />
+    <ClCompile Include="..\..\FSScanner.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\AssignVisitor.h">
