--- a/cpp/src/FreezeScript/msbuild/transformdb/transformdb.vcxproj
+++ b/cpp/src/FreezeScript/msbuild/transformdb/transformdb.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -66,15 +66,21 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\CPlusPlusUtil.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Grammar.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Parser.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Preprocessor.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Scanner.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\SliceUtil.cpp" />
     <ClCompile Include="..\..\AssignVisitor.cpp" />
     <ClCompile Include="..\..\Data.cpp" />
     <ClCompile Include="..\..\Error.cpp" />
     <ClCompile Include="..\..\Exception.cpp" />
     <ClCompile Include="..\..\Functions.cpp" />
-    <ClCompile Include="..\..\Grammar.cpp" />
-    <ClCompile Include="..\..\Parser.cpp" />
+    <ClCompile Include="..\..\FSGrammar.cpp" />
+    <ClCompile Include="..\..\FSParser.cpp" />
     <ClCompile Include="..\..\Print.cpp" />
-    <ClCompile Include="..\..\Scanner.cpp" />
+    <ClCompile Include="..\..\FSScanner.cpp" />
     <ClCompile Include="..\..\TransformAnalyzer.cpp" />
     <ClCompile Include="..\..\transformdb.cpp" />
     <ClCompile Include="..\..\Transformer.cpp" />
@@ -106,6 +112,8 @@
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.3\build\native\berkeley.db.v120.targets" Condition="Exists('..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.3\build\native\berkeley.db.v120.targets')" />
     <Import Project="..\..\..\..\msbuild\packages\berkeley.db.v140.5.3.28.3\build\native\berkeley.db.v140.targets" Condition="Exists('..\..\..\..\msbuild\packages\berkeley.db.v140.5.3.28.3\build\native\berkeley.db.v140.targets')" />
+    <Import Project="..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.9\build\native\mcpp.v140.targets" Condition="Exists('..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.9\build\native\mcpp.v140.targets')" />
+    <Import Project="..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.9\build\native\mcpp.v120.targets" Condition="Exists('..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.9\build\native\mcpp.v120.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -113,5 +121,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.3\build\native\berkeley.db.v120.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.3\build\native\berkeley.db.v120.targets'))" />
     <Error Condition="!Exists('..\..\..\..\msbuild\packages\berkeley.db.v140.5.3.28.3\build\native\berkeley.db.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\berkeley.db.v140.5.3.28.3\build\native\berkeley.db.v140.targets'))" />
+    <Error Condition="!Exists('..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.9\build\native\mcpp.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.9\build\native\mcpp.v140.targets'))" />
+    <Error Condition="!Exists('..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.9\build\native\mcpp.v120.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.9\build\native\mcpp.v120.targets'))" />
   </Target>
 </Project>
