--- a/cpp/src/slice2freezej/msbuild/slice2freezej.vcxproj.filters
+++ b/cpp/src/slice2freezej/msbuild/slice2freezej.vcxproj.filters
@@ -15,4 +15,7 @@
       <Extensions>ice</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
