--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -37,6 +37,11 @@ debug = true
 iceHome =
 
 //
+// Set the location of a local Ice Builder for Gradle source directory
+//
+iceBuilderHome =
+
+//
 // Gradle build properties
 //
 org.gradle.daemon = true
