--- a/.travis.yml
+++ b/.travis.yml
@@ -1,52 +1,45 @@
 sudo: false
-language: python
+language: generic
 addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-4.9
-    - gcc-4.9
+    - g++-5
+    - gcc-5
     - python-dev
     - python-pip
     - libdb++-dev
     - libdb-dev
     - libdb-java
     - libdb-java-dev
+    - libdbus-glib-1-dev
+    - libbluetooth-dev
+
 cache:
   directories:
   - "$HOME/.gradle"
+
 env:
   global:
-  - CXX=g++-4.9
+  - CXX=g++-5
   - GCC_COMPILER=yes
   - MCPP_HOME=${TRAVIS_BUILD_DIR}/mcpp
   - OPTIMIZE=yes
-  - LMDB_REVISION=0.9.16
-  - LMDB_BUILD_DIR=${TRAVIS_BUILD_DIR}/lmdb-LMDB_${LMDB_REVISION}
-  - LMDB_HOME=${TRAVIS_BUILD_DIR}/lmdb
-  - ICE_HOME=${TRAVIS_BUILD_DIR}/ice
-python:
-- '2.7'
+
 before_install:
 - git clone https://github.com/zeroc-ice/mcpp.git mcpp
-- wget https://github.com/LMDB/lmdb/archive/LMDB_${LMDB_REVISION}.tar.gz
-- tar xvf LMDB_${LMDB_REVISION}.tar.gz
 - git submodule update --init
+
 install:
 - make -C ${MCPP_HOME} -j3
-- mkdir -p ${LMDB_HOME}/bin
-- mkdir -p ${LMDB_HOME}/lib
-- mkdir -p ${LMDB_HOME}/include
-- mkdir -p ${LMDB_HOME}/man/man1
-- CPPFLAGS=-fPIC make -C ${LMDB_BUILD_DIR}/libraries/liblmdb install prefix=${LMDB_HOME}
-- rm -f ${LMDB_HOME}/lib/liblmdb.so
-- pip install passlib
-- make BUILD_ICE_BT=no -C ${ICE_HOME}/cpp -j3
-- make -C ${ICE_HOME}/java -j3
+- make -C ice/cpp IceXML slice2java TestCommon -j3
+- ice/java/gradlew -p ice/java Ice:assemble
 - make -j3
+
 script:
 - python allTests.py
+
 notifications:
   email: travis-ci@zeroc.com
   slack:
