--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -42,6 +42,24 @@ iceHome =
 iceBuilderHome =
 
 //
+// Windows specific options
+//
+
+//
+// The platform uses by the C++ builds, supported values are `x64` and `Win32`,
+// that is required to locate the slice2java compiler in the platform depend
+// directory.
+//
+cppPlatform =
+
+//
+// The configuration uses by the C++ builds, supported values are `Debug` and `Release`,
+// that is required to locate the slice2java compiler in the configuration depend
+// directory.
+//
+cppConfiguration =
+
+//
 // Gradle build properties
 //
 org.gradle.daemon = true
