--- a/java/gradle/freeze.gradle
+++ b/java/gradle/freeze.gradle
@@ -21,3 +21,25 @@ ext.localDependency = { artifactId ->
         return "com.zeroc:${artifactId}:${project.version}"
     }
 }
+
+ext.demoJar = { name ->
+    def taskName = name + "Jar"
+    // Create a jar for the client & server which includes everything in the demo.
+    def jarTask = tasks.create(name: taskName, type: Jar) {
+        version = ""
+        baseName = name
+        from(sourceSets.main.output) {
+            include "**"
+        }
+    }
+
+    jarTask.manifest {
+        attributes("Main-Class": name.capitalize())
+        attributes("Class-Path": configurations.runtime.resolve().collect { it.toURI() }.join(' '))
+    }
+
+
+    artifacts {
+        archives jarTask
+    }
+}
